# ailoop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: config.md  examples.md  index.md  memory.md  release-launch.md  release-notes-v0.1.0.md  runners.md  support.md  task-file.md
docs/branding/: hero-banner-brief.md
docs/site/: index.html
scripts/: github_pr_create.py  tui_memory_smoke.sh
src/ailoop/: cli.py  config.py  memory.py  models.py  paths.py  prompting.py  service.py  state.py  stats.py  tasks.py  tui.py  workspace_history.py
src/ailoop/runners/: __init__.py  base.py  local.py
tests/: test_cli.py  test_config.py  test_github_pr_create.py  test_prompting.py  test_service.py  test_tasks.py  test_tui.py  test_workspace_loop.py  test_workspace_professional.py
